--- a/src/4-components/_typography.scss
+++ b/src/4-components/_typography.scss
@@ -134,7 +134,7 @@ pre {
 	word-wrap: normal;
 	overflow: scroll;
 	-webkit-overflow-scrolling: touch;
-	@include line-height(1.5);
+	@include line-height(1);
 	@include padding(0.25 0.5);
 	@include debug-baseline;
 	@if enabled(styled) {
@@ -143,7 +143,7 @@ pre {
 		@include baseline-borders($border-width, 0, 1);
 		border-left-width: 5px;
 	}
-	else {
+	@else {
 		@include margin-bottom(1);
 	}
 	code {
