--- a/src/3-mixins/_all.scss
+++ b/src/3-mixins/_all.scss
@@ -3,6 +3,7 @@
 @import "gradients";
 @import "icons";
 @import "utils";
+@import "color";
 @import "button";
 // @import "grid";
 // @import "label";
