use include-media package for media queries

--- a/src/2-config/_all.scss
+++ b/src/2-config/_all.scss
@@ -3,5 +3,6 @@
 @import "material-colors";
 @import "colors";
 @import "typography";
+@import "media-queries";
 // @import "button";
 // @import "input";
