--- a/src/2-config/_features.scss
+++ b/src/2-config/_features.scss
@@ -3,7 +3,7 @@ $features: () !default;
 $default-features: (
 	debug: false,
 	output: true,
-	styled: true,
+	styled: false,
 	buttons: (
 		big: false,
 		large: false,
