--- a/src/2-config/_media-queries.scss
+++ b/src/2-config/_media-queries.scss
@@ -1,5 +1,7 @@
 @import "node_modules/include-media/dist/include-media";
 
+// https://medium.freecodecamp.com/the-100-correct-way-to-do-css-breakpoints-88d6a5ba1862
+
 $breakpoints: (
 	XS:  400px,
 	S:   600px,
