--- a/src/3-mixins/_debug.scss
+++ b/src/3-mixins/_debug.scss
@@ -10,3 +10,30 @@
 		background-size: 100% $line-height;
 	}
 }
+
+@mixin debug-media() {
+	@if enabled(debug) {
+		$i: 2;
+		body:before {
+			position: fixed !important;
+			left: 0;
+			right: 0;
+			width: 110px;
+			height: 18px;
+			content: 'default';
+			color: debug-color(black);
+			font: 12px/1.5 sans-serif;
+			text-align: center;
+			background-color: debug-color($i);
+			margin: 0 auto;
+			z-index: z-index(modal);
+			@each $key, $value in $breakpoints {
+				$i: $i+1;
+				@include media("screen", ">=#{$key}") {
+					content: "#{$key} - #{$value}";
+					background-color: debug-color($i);
+				}
+			}
+		}
+	}
+}
