fix variable bug

--- a/src/2-config/_debug.scss
+++ b/src/2-config/_debug.scss
@@ -1,7 +1,7 @@
 // DEBUG
 // ---------------------------------------------------------------------------
 
-$debug-colors: () !important;
+$debug-colors: () !default;
 
 $debug-colors-default: (
 	navy: #001f3f,
