use placeholder mixin

--- a/src/2-config/_colors.scss
+++ b/src/2-config/_colors.scss
@@ -10,6 +10,7 @@ $default-colors: (
 	text: material-color(grey, 800),
 	muted: material-color(grey, 700),
 	primary: material-color(pink),
+	placeholder: rgba(0, 0, 0, 0.5),
 	success: material-color(light-green),
 	info: material-color(light-blue),
 	warning: material-color(orange, 700),
