--- a/src/3-mixins/_all.scss
+++ b/src/3-mixins/_all.scss
@@ -1,9 +1,10 @@
 @import "animation";
+@import "button";
+@import "color";
 @import "debug";
 @import "gradients";
-@import "icons";
-@import "utils";
-@import "color";
-@import "button";
 // @import "grid";
+@import "icons";
 // @import "label";
+@import "placeholder";
+@import "utils";
