style date input with textfield shadow

--- a/src/4-components/_form.scss
+++ b/src/4-components/_form.scss
@@ -79,6 +79,7 @@ textarea {
 	@include print($textarea);
 }
 
+input[type=date],
 input[type=search],
 input[type=number] {
 	box-sizing: border-box;
