--- a/src/1-functions/_all.scss
+++ b/src/1-functions/_all.scss
@@ -1,4 +1,6 @@
+@import "node_modules/unitconversion/unitconversion";
 @import "debug";
+@import "grid";
 @import "helpers";
 @import "math";
 @import "utils";
