--- a/src/2-config/_all.scss
+++ b/src/2-config/_all.scss
@@ -3,6 +3,7 @@
 @import "debug";
 @import "features";
 @import "globals";
+@import "grid";
 // @import "input";
 @import "media-queries";
 @import "typography";
