--- a/src/3-mixins/_all.scss
+++ b/src/3-mixins/_all.scss
@@ -3,7 +3,7 @@
 @import "color";
 @import "debug";
 @import "gradients";
-// @import "grid";
+@import "grid";
 @import "icons";
 // @import "label";
 @import "placeholder";
