--- a/src/2-config/_globals.scss
+++ b/src/2-config/_globals.scss
@@ -1,6 +1,8 @@
 // GLOBALS
 // ---------------------------------------------------------------------------
 
+$max-page-width: 1440px !default;
+
 $border-width: 1px !default;
 $border-radius: 3px !default;
 $button-radius: 3px !default;
