--- a/src/2-config/_grid.scss
+++ b/src/2-config/_grid.scss
@@ -6,3 +6,6 @@ $columns: () !default;
 
 // default is $base-line-height for all breakpoints
 $gutters: () !default;
+
+// default is $base-line-height for all breakpoints
+$offsets: () !default;
