--- a/src/nolie.scss
+++ b/src/nolie.scss
@@ -4,13 +4,12 @@
  * ╚═╝╚═╝╩ ╩╩╝╚╝╩  ╩═╝╩ ╩╚═╝╚═╝
  *
  * Name:        Nolie
- * URI:         https://github.com/geminilabs/nolie.css
+ * URI:         https://github.com/pryley/nolie.css
  * Description: A CSS framework built on Typey
- * Version:     2.0.0
+ * Version:     0.2.1
  * Author:      Paul Ryley
  * Author URI:  https://geminilabs.io
- * License:     GPLv2
- * License URI: https://www.gnu.org/licenses/gpl-2.0.html
+ * License:     MIT
  */
 
 @import "1-functions/all";
